--- a/firstJsProject.html
+++ b/firstJsProject.html
@@ -92,6 +92,8 @@
     
     
 </body>
+
+<script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
 <script src="tracker.js"></script>
 
 </html>
